Add config endpoints and improve common erros like ratelimit and invalid JSON body
