# lib/httpServer/index.js
@@ -15,27 +15,46 @@ const projection = require('./projection');
 
 const swaggerDocument = yaml.safeLoad(require('fs-extra').readFileSync(require('path').join(__dirname, './swagger.yml')));
 
+const createLimiterHandler = (windowMs, message) => {
+    return (req, res, /*next*/) => {
+        res.setHeader('Retry-After', Math.ceil(windowMs / 1000));
+        res.status(429).json({
+            status: 429,
+            message: message
+        });
+    };
+};
+
+const limiterLogger = (req) => {
+    console.warn(`Request limit reached for user ${req.user ? req.user.name : 'unknown'} on path ${req.path}`);
+};
+
 const apiLimiter = new RateLimit({
     windowMs: 15 * 60 * 1000, // 15 minutes
     max: 100, // limit each IP to 100 requests per windowMs
-    delayMs: 0 // disable delaying - full speed until the max limit is reached
+    delayMs: 0, // disable delaying - full speed until the max limit is reached
+    message: 'Too many requests, please try again after a 15 minutes',
+    handler: createLimiterHandler(15 * 60 * 1000, 'Too many requests, please try again after a 15 minutes'),
+    onLimitReached: limiterLogger
 });
 
-let createUserLimiter = null;
+let apiSuperLimiter = null;
 
 if (process.env.NODE_ENV == 'development')
-    createUserLimiter = (req, res, next) => next();
+    apiSuperLimiter = (req, res, next) => next();
 else
-    createUserLimiter = new RateLimit({
+    apiSuperLimiter = new RateLimit({
         windowMs: 24 * 60 * 60 * 1000, // 1 day window
         delayAfter: 1, // begin slowing down responses after the first request
         delayMs: 3 * 1000, // slow down subsequent responses by 3 seconds per request
         max: 2, // start blocking after 2 requests
-        message: 'Too many accounts created from this IP, please try again after a day'
+        message: 'Too many requests, please try again after a day',
+        handler: createLimiterHandler(24 * 60 * 60 * 1000, 'Too many requests, please try again after a day'),
+        onLimitReached: limiterLogger
     });
 
 class HTTPServer {
-    constructor(dockerService, authService, stackTemplateService) {
+    constructor(dockerService, authService, stackTemplateService, configService) {
         this.dockerService = dockerService;
         this.authService = authService;
         this.stackTemplateService = stackTemplateService;
@@ -56,12 +75,12 @@ class HTTPServer {
         if (process.env.NODE_ENV != 'development')
             this.app.use(apiLimiter);
 
-        this.app.get('/ping', (req, res) => {
+        this.app.get('/ping', apiLimiter, (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
             res.status(200).json('pong');
         });
 
-        this.app.get('/healthcheck', async (req, res) => {
+        this.app.get('/healthcheck', apiLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
             const isDockerThere = await dockerService.ping();
@@ -69,7 +88,7 @@ class HTTPServer {
             res.status(200).json(projection.healthcheckResult(isDockerThere));
         });
 
-        this.app.get('/stacks', authService.createMiddleware(), async (req, res) => {
+        this.app.get('/stacks', authService.createMiddleware(), apiLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
             const stacks = await dockerService.getStacks(req.user);
@@ -77,7 +96,7 @@ class HTTPServer {
             res.status(200).json(projection.stacks(stacks));
         });
 
-        this.app.post('/stacks', authService.createMiddleware(), async (req, res) => {
+        this.app.post('/stacks', authService.createMiddleware(), apiLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
             const stackTemplateName = req.body.stackTemplateName;
@@ -104,7 +123,7 @@ class HTTPServer {
             }
         });
 
-        this.app.get('/stacks/:stackName', authService.createMiddleware(), async (req, res) => {
+        this.app.get('/stacks/:stackName', authService.createMiddleware(), apiLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
             const stackName = req.params.stackName;
@@ -118,7 +137,7 @@ class HTTPServer {
             res.status(200).json(projection.stack(stack));
         });
 
-        this.app.delete('/stacks/:stackName', authService.createMiddleware(), async (req, res) => {
+        this.app.delete('/stacks/:stackName', authService.createMiddleware(), apiLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
             const stackName = req.params.stackName;
@@ -132,7 +151,7 @@ class HTTPServer {
             res.status(200).json(projection.stackDeletionResult(stackDeleted));
         });
 
-        this.app.get('/templates/stacks', authService.createMiddleware(), async (req, res) => {
+        this.app.get('/templates/stacks', authService.createMiddleware(), apiLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
             const stackTemplatesFound = await stackTemplateService.getStackTemplates();
@@ -140,12 +159,12 @@ class HTTPServer {
             res.status(200).json(stackTemplatesFound);
         });
 
-        this.app.post('/templates/stacks', authService.createMiddleware(), async (req, res) => {
+        this.app.post('/templates/stacks', authService.createMiddleware(), apiLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
             const stackTemplateName = req.body.stackTemplateName;
             const stackTemplateData = req.body.stackTemplateData;
-            try {                
+            try {
                 const stackTemplateCreated = await stackTemplateService.createStackTemplate(req.user, stackTemplateName, stackTemplateData);
 
                 res.status(200).json(stackTemplateCreated);
@@ -156,7 +175,7 @@ class HTTPServer {
             }
         });
 
-        this.app.put('/templates/stacks', authService.createMiddleware(), async (req, res) => {
+        this.app.put('/templates/stacks', authService.createMiddleware(), apiLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
             const stackTemplateName = req.body.stackTemplateName;
@@ -173,7 +192,7 @@ class HTTPServer {
             }
         });
 
-        this.app.get('/templates/stacks/:stackTemplateName', authService.createMiddleware(), async (req, res) => {
+        this.app.get('/templates/stacks/:stackTemplateName', authService.createMiddleware(), apiLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
             const stackTemplateName = req.params.stackTemplateName;
@@ -187,7 +206,7 @@ class HTTPServer {
             res.status(200).json(stackTemplate);
         });
 
-        this.app.delete('/templates/stacks/:stackTemplateName', authService.createMiddleware(), async (req, res) => {
+        this.app.delete('/templates/stacks/:stackTemplateName', authService.createMiddleware(), apiLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
             const stackTemplateName = req.params.stackTemplateName;
@@ -206,7 +225,7 @@ class HTTPServer {
             }
         });
 
-        this.app.get('/users', authService.createMiddleware(), async (req, res) => {
+        this.app.get('/users', authService.createMiddleware(), apiLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
             try {
@@ -219,14 +238,14 @@ class HTTPServer {
             }
         });
 
-        this.app.post('/users', createUserLimiter, authService.createMiddleware(false), async (req, res) => {
+        this.app.post('/users', authService.createMiddleware(false), apiSuperLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
             const name = req.body.name;
             const password = req.body.password;
             const type = req.body.type;
 
-            if (name == null || password == null) throw new HTTPError(400, 'The parameter name and/or password must be a string');
+            if (name == null || password == null) throw new HTTPError(400, 'The name and/or password parameter must be a string');
 
             try {
                 const userCreated = await authService.createUser(req.user, name, password, type);
@@ -238,14 +257,14 @@ class HTTPServer {
             }
         });
 
-        this.app.put('/users', authService.createMiddleware(), async (req, res) => {
+        this.app.put('/users', authService.createMiddleware(), apiLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
             const name = req.body.name;
             const password = req.body.password;
             const type = req.body.type;
 
-            if (name == null) throw new HTTPError(400, 'The parameter name must be a string');
+            if (name == null) throw new HTTPError(400, 'The name parameter must be a string');
 
             try {
                 const userUpdated = await authService.updateUser(req.user, name, password, type);
@@ -258,14 +277,14 @@ class HTTPServer {
             }
         });
 
-        this.app.post('/token', async (req, res) => {
+        this.app.post('/token', apiLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
             try {
                 const name = req.body.name;
                 const password = req.body.password;
 
-                if (name == null || password == null) throw new HTTPError(400, 'The parameter name and/or password must be a string');
+                if (name == null || password == null) throw new HTTPError(400, 'The name and/or password parameter must be a string');
 
                 const token = await authService.createToken(name, password);
 
@@ -276,9 +295,42 @@ class HTTPServer {
             }
         });
 
+        this.app.get('/admin/config', authService.createMiddleware(), apiLimiter, async (req, res) => {
+            if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
+
+            try {
+                const config = await configService.getConfig(req.user);
+
+                res.status(200).json(config);
+            } catch (ex) {
+                if (ex instanceof AuthorizationError) throw new HTTPError(403, ex.message, null, ex);
+                else throw ex;
+            }
+        });
+
+        this.app.put('/admin/config', authService.createMiddleware(), apiLimiter, async (req, res) => {
+            if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
+
+            const config = req.body;
+
+            if (config == null) throw new HTTPError(400, 'The config parameter must be a string');
+
+            try {
+                const updatedConfig = await configService.updateConfig(req.user, config);
+
+                res.status(200).json(updatedConfig);
+            } catch (ex) {
+                if (ex instanceof AuthorizationError) throw new HTTPError(403, ex.message, null, ex);
+                else throw ex;
+            }
+        });
+
         this.app.use(function (err, req, res, next) {  // eslint-disable-line no-unused-vars            
-            if (!(err instanceof HTTPError))
-                err = new HTTPError(500, null, null, err);
+            if (!(err instanceof HTTPError)) {
+                if (err.status) err = new HTTPError(err.status, err.message, null, err);
+                else if (err.statusCode) err = new HTTPError(err.statusCode, err.message, null, err);
+                else err = new HTTPError(500, null, null, err);
+            }
 
             res.status(err.status);
             console.error(JSON.stringify(err));
